--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "angularx-qrcode": "^16.0.2",
+    "axios": "^1.6.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
