--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@capacitor/cli": "5.3.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.26.0",
@@ -65,6 +65,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-sonarqube-reporter": "^1.4.0",
+    "sonarqube-scanner": "^3.3.0",
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
